# cairo-experiments

./: README.md  pyproject.toml
cairo_experiments/dec_24/: static_pygame_01.py
cairo_experiments/utils/: recorder.py
python-art-experiments/arcade/: base_loop.py
python-art-experiments/pygame/: static_pygame_01.py
