[tool.poetry]
name = "python-art-experiments"
version = "0.1.0"
description = ""
authors = ["Iva Marika Dervisevic <thedervish@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pycairo = "^1.27.0"
pillow = "^11.0.0"
pygame = "^2.6.1"
numpy = "^2.2.1"
arcade = "3.0.0.dev40"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
